--- a/index.html
+++ b/index.html
@@ -3,44 +3,49 @@
 
 <head>
   <meta charset="utf-8">
-  <title> Demkove dúhové kako ️‍🌈 </title>
+  <title> Demkove webove ucenie </title>
+  <link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="https://use.typekit.net/dor4rom.css">
 </head>
 
-<body>
+<body style="">
   <table cellspacing="20">
     <tr>
       <td><img src="images/crop3.png" alt="Demkovo"></td>
       <td>
         <h1>Demeter a jeho furt niečo</h1>
         <p>Manažér voľného obchodu v <em><strong><a href="https://www.albatrosmedia.sk">Albatros Media Slovensko</a></strong></em></p>
-        <p>V minulosti som sa venoval najmä nesmiernym hlúpostiam.</p>
-        <p>Teraz sú tie hlúposti pomerne sofistikované. Excel a podobne.</p>
+        <p>V minulosti som sa venoval najmä rádiám a práci v nich.</p>
+        <p>Teraz už robím pomerne sofistikované veci.</p>
+        <p>Zatiaľ HTML a CSS a pribudne aj JAVA či react.js a aj databázy.</p>
+        <p>Rád by som do roka programoval tak, aby som bol na seba hrdý.</p>
       </td>
     </tr>
   </table>
 
-  <hr size="2" noshade>
-  <br>
+  <hr>
   <h3>Vzdelanie</h3>
   <ul>
     <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjl2ZS73Kj5AhUCQvEDHSbhB_wQFnoECBAQAQ&url=https%3A%2F%2Fwww.zsivanka.sk%2F&usg=AOvVaw2vw2nLhdzI-WkdCzFYPeax">Základná škola</a></li>
     <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjrvJCw36j5AhXmif0HHU0IAAcQFnoECAsQAQ&url=https%3A%2F%2Fzochova.sk%2F&usg=AOvVaw0bT1Z2PijHMAJrJf-39T3u">Stredná škola</a></li>
     <li>Vysoká škola</li>
-    <li>Škola lesná</li>
-    <li>Božidara 🌈 Turzonovová</li>
+    <li>Vysoká škola 2</li>
   </ul>
-  <hr size="3" noshade>
+  <hr>
   <!-- -->
-  <h3>Moje zábavky</h3>
+  <h3>Moje životné radosti</h3>
   <ol type="i">
     <li><strong><a href="https://www.instagram.com/placha.srnka/">Števka</a></strong></li>
     <li>Cestovanie so Števkou</li>
     <li>Káva so Števkou</li>
-    
-    </ol>
+    <li>Cake so Števkou</li>
+    <li>Tancovanie so Števkou</li>
+    <li>A to sme spolu už dlho.</li>
+
   </ol>
-  <hr size="3" noshade>
-  <h3>Praca</h3>
+  </ol>
+  <hr>
+  <h3>Práca</h3>
   <table>
     <thead>
       <tr>
@@ -65,26 +70,38 @@
       <td>etc. store</td>
     </tr>
   </table>
-  <hr size="3" noshade>
+  <hr>
   <h3>Skills</h3>
   <table cellspacing="10%">
     <tr>
       <td>Outlook</td>
-      <td>🌟🌟🌟</td>
+      <td>✩✩✩</td>
     </tr>
     <tr>
       <td>Photo</td>
-      <td>🌟🌟🌟🌟</td>
+      <td>✩✩✩✩</td>
     </tr>
     <tr>
       <td>Adobe Illustrator</td>
-      <td>🌟🌟</td>
+      <td>✩✩</td>
+    </tr>
+    <tr>
+      <td>HTML</td>
+      <td>✩✩✩✩</td>
     </tr>
 
   </table>
-  <hr size="3" noshade>
-  <h4><a href="kontakty.html">Kontaktuj</a></h4>
-  <hr size="3" noshade>
+  <hr>
+  <h3><a href="kontakty.html">Kontaktuj ma</a></h3>
+  <hr>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+    Phasellus viverra leo vitae egestas aliquet.<br>
+    Morbi a ligula vel sapien suscipit blandit.<br>
+    Suspendisse suscipit leo eget consectetur ultricies.<br>
+    Nullam sed arcu at dolor commodo ullamcorper.<br>
+    Phasellus aliquet nisi sed rutrum molestie.<br>
+    Nam feugiat leo sed tellus accumsan mollis.<br>
+    Nulla in facilisis augue, eu vulputate enim.</p>
 </body>
 
 </html>
