--- a/kontakty.html
+++ b/kontakty.html
@@ -4,21 +4,22 @@
 <head>
   <meta charset="utf-8">
   <title>Kontakty</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <h3>KONTAKTY DEMETEROWE</h3>
-  <hr size="1" noshade >
+  <hr>
   <ol type="I">
     <li><a href="https://www.instagram.com/demeter/">instagram</a></li>
     <li><a href="https://www.linkedin.com/in/andrej-adamčák-7448ba6/">linkedin</a></li>
     <li><a href="<a href=" mailto:muchotravka@gmail.com">Pošli mail na DL</a></li>
 
   </ol>
-  <h4><a href="index.html">SPAŤ NA ZIVOTOPIS</a></h4>
+  <h3><a href="index.html">SPÄŤ NA ŽIVOTOPIS</a></h3>
   <hr>
   <form class="" action="mailto:muchotravka@gmail.com" method="post">
-    <label for="YOUR NAME:">Tvoje meno:</label>
+    <label for="yourName">Tvoje meno:</label>
     <input type="text" name="yourName" value="">
   <br>
     <label>Email</label>
